Project

General

Profile

Actions

Bug #57307

closed

rgw: cloud sync: target objects are not created correctly

Added by Yehuda Sadeh over 1 year ago. Updated over 1 year ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
cloudsync
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

This happens due to failure to read source objects correctly (requests are not signed).


Related issues 1 (1 open0 closed)

Related to rgw - Bug #57306: rgw: cloud sync crashPending BackportYehuda Sadeh

Actions
Actions #1

Updated by Casey Bodley over 1 year ago

  • Related to Bug #57306: rgw: cloud sync crash added
Actions #2

Updated by Casey Bodley over 1 year ago

  • Tags set to cloudsync
  • Pull request ID set to 47819

backport will be tracked by https://tracker.ceph.com/issues/57306

Actions #3

Updated by Casey Bodley over 1 year ago

  • Status changed from New to Fix Under Review
  • Assignee set to Yehuda Sadeh
Actions #4

Updated by Casey Bodley over 1 year ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF