rgw: cloud sync: sign requests that read source objs

Fixes: https://tracker.ceph.com/issues/57307

Requests that were sent to fetch the objects from the source zone weren't
being signed. Changing the interface to use rRGWRESTStreamRWRequest::send()
that signs the requests.

Signed-off-by: Yehuda Sadeh <yehuda@redhat.com>